--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 ****************************************************************************************************
-This is an optimized and parallel implementation of the sobel filter for bmp formatted images
+This is an optimized and parallel implementation of the sobel filter for bmp formatted images to run on The Lonestar Supercomputer at Texas Advanced Computing Center
 ****************************************************************************************************
 To setup project run the cd into "s_image" and run "script"
 
