--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 
 ****************************************************************************************************
 This is an optimized and parallel implementation of the sobel filter for bmp formatted images to run on The Lonestar Supercomputer at Texas Advanced Computing Center
+A project report is also part of this repository for further information.
 ****************************************************************************************************
 To setup project run the cd into "s_image" and run "script"
 
